--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "autoprefixer": "10.4.15",
+    "flowbite": "^1.8.1",
+    "mongoose": "^7.5.2",
     "next": "13.5.1",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
