--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "flowbite": "^1.8.1",
     "mongoose": "^7.5.2",
     "next": "13.5.1",
